syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.pm.grpc.account";
package account;

import "common.proto";

service AccountService {
  rpc CreateAccount (CreateAccountRequest) returns (CreateAccountResponse);
  rpc GetAccount (GetAccountRequest) returns (GetAccountResponse);
  rpc GetAccountsByCustomer (GetAccountsByCustomerRequest) returns (GetAccountsByCustomerResponse);
  rpc UpdateAccountStatus (UpdateAccountStatusRequest) returns (UpdateAccountStatusResponse);
  rpc GetAccountBalance (GetAccountBalanceRequest) returns (GetAccountBalanceResponse);
  rpc ValidateCustomer (ValidateCustomerRequest) returns (ValidateCustomerResponse);
  // NEW: Add balance update method for transactions
  rpc UpdateAccountBalance (UpdateAccountBalanceRequest) returns (UpdateAccountBalanceResponse);
}

message CreateAccountRequest {
  string customer_id = 1;
  com.pm.grpc.common.AccountType account_type = 2;
  string initial_deposit = 3; // BigDecimal as string for precision
}

message CreateAccountResponse {
  string account_id = 1;
  string account_number = 2;
  string customer_id = 3;
  com.pm.grpc.common.AccountType account_type = 4;
  string balance = 5;
  com.pm.grpc.common.AccountStatus status = 6;
  string created_date = 7;
  com.pm.grpc.common.ServiceResponse service_response = 8;
}

message GetAccountRequest {
  string account_id = 1;
}

message GetAccountResponse {
  string account_id = 1;
  string account_number = 2;
  string customer_id = 3;
  com.pm.grpc.common.AccountType account_type = 4;
  string balance = 5;
  com.pm.grpc.common.AccountStatus status = 6;
  string created_date = 7;
  com.pm.grpc.common.ServiceResponse service_response = 8;
}

message GetAccountsByCustomerRequest {
  string customer_id = 1;
}

message GetAccountsByCustomerResponse {
  repeated GetAccountResponse accounts = 1;
  com.pm.grpc.common.ServiceResponse service_response = 2;
}

message UpdateAccountStatusRequest {
  string account_id = 1;
  com.pm.grpc.common.AccountStatus new_status = 2;
}

message UpdateAccountStatusResponse {
  string account_id = 1;
  com.pm.grpc.common.AccountStatus status = 2;
  string last_modified_date = 3;
  com.pm.grpc.common.ServiceResponse service_response = 4;
}

message GetAccountBalanceRequest {
  string account_id = 1;
}

message GetAccountBalanceResponse {
  string account_id = 1;
  string balance = 2;
  com.pm.grpc.common.ServiceResponse service_response = 3;
}

message ValidateCustomerRequest {
  string customer_id = 1;
}

message ValidateCustomerResponse {
  bool exists = 1;
  string customer_name = 2;
  com.pm.grpc.common.ServiceResponse service_response = 3;
}

// NEW: Messages for balance updates
message UpdateAccountBalanceRequest {
  string account_id = 1;
  string new_balance = 2;
  string transaction_id = 3; // For audit trail
  string description = 4;
}

message UpdateAccountBalanceResponse {
  string account_id = 1;
  string previous_balance = 2;
  string new_balance = 3;
  string last_modified_date = 4;
  com.pm.grpc.common.ServiceResponse service_response = 5;
}